fix nav visibility

--- a/frontend/src/components/nav/styles/nav.scss
+++ b/frontend/src/components/nav/styles/nav.scss
@@ -86,71 +86,71 @@ $mobile-nav-background-lightgreen: #cdf0c2;
   }
 }
 
-.nav-mobile {
-  display: none;
-}
-
-// @media only screen and (max-width: 450px) {
-//   .nav-container {
-//     display: flex;
-//     flex-direction: column;
-//     height: 100vh;
-//   }
-//   .nav-mobile {
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-//     width: 100vw;
-//     position: sticky;
-//     top: 0px;
-//     z-index: 100;
-
-//     button {
-//       width: 100%;
-//       height: 10vh;
-//       font-size: 2.75em;
-//       color: $nav-button-dark-green;
-//       background-color: $mobile-nav-background-lightgreen;
-//     }
-//   }
-
-//   .Nav {
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: flex-start;
-//     align-items: center;
-//     height: 85vh;
-//     font-size: 3em;
-//     gap: 7vh;
-//     background-color: white;
-//     // border: 1px solid $post-light-green;
-//     position: fixed;
-//     top: 10vh;
-//     z-index: 90;
-
-//     .nav-right,
-//     .nav-left {
-//       width: 100%;
-//       justify-content: flex;
-//       flex-direction: column;
-//       align-items: center;
-//       padding-right: 0;
-//       padding-left: 0;
-//       gap: 7vh;
-//     }
-
-//     #logout-btn {
-//       background-color: white;
-//       color: $nav-button-dark-green;
-//     }
-
-//     .nav-icon-home {
-//       font-size: 1em;
-//       color: $post-light-green;
-//     }
-//   }
-
-//   .nav-layout {
-//     display: flex;
-//   }
+// .nav-mobile {
+//   display: none;
 // }
+
+@media only screen and (max-width: 450px) {
+  .nav-container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+  }
+  .nav-mobile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    position: sticky;
+    top: 0px;
+    z-index: 100;
+
+    button {
+      width: 100%;
+      height: 10vh;
+      font-size: 2.75em;
+      color: $nav-button-dark-green;
+      background-color: $mobile-nav-background-lightgreen;
+    }
+  }
+
+  .Nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: 85vh;
+    font-size: 3em;
+    gap: 7vh;
+    background-color: white;
+    // border: 1px solid $post-light-green;
+    position: fixed;
+    top: 10vh;
+    z-index: 90;
+
+    .nav-right,
+    .nav-left {
+      width: 100%;
+      justify-content: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-right: 0;
+      padding-left: 0;
+      gap: 7vh;
+    }
+
+    #logout-btn {
+      background-color: white;
+      color: $nav-button-dark-green;
+    }
+
+    .nav-icon-home {
+      font-size: 1em;
+      color: $post-light-green;
+    }
+  }
+
+  .nav-layout {
+    display: flex;
+  }
+}
